Fixed outline overflow issue on ListenButton.

--- a/src/components/radio/RadioWidget.module.scss
+++ b/src/components/radio/RadioWidget.module.scss
@@ -16,7 +16,7 @@
   flex-grow: 1;
   gap: 24px;
   justify-content: center;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100%;
 }
 
